Network config: Fix CreateConfiguration for visible network

This CL:
* Fixes an issue where configuring a new (unsaved) visible
  network with an existing GUID would change the network's id.
* Changes cr-network-select-item to fire an event any time a
  network's connection state changes (not just on connect).
  This turned out to be not necessary but is more genrally
  useful and makes the code a bit more clear.
* Fixes the logic in cr-network-select to allow all connection
  state changes to pass through to the OOBE UI, and to correnctly
  fire events whenever the default network conneciton state
  changes.
* Correctly identifies the "default" network when Ethernet is
  in a connecting state (edge case).

Bug: 795719

Fix CreateConfiguration for visible network

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1f6ecb682bd937549f95a3dbf9264146866f54c9
Reviewed-on: https://chromium-review.googlesource.com/917532
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536843}
Former-commit-id: 240d9b2d9353eeceb21006da864011bf475e8a6b