chrome/browser/resources/chromeos/login/oobe_welcome.js
@@ -102,9 +102,6 @@ Polymer({
    */
   networkLastSelectedGuid_: '',
 
-  /** @private {string} GUID of the default network. */
-  defaultNetworkGuid_: '',
-
   /** @override */
   ready: function() {
     this.updateLocalizedContent();
@@ -320,22 +317,27 @@ Polymer({
   },
 
   /**
-   * This gets called whenever the default network changes.
+   * Event triggered when the default network state may have changed.
    * @param {!{detail: ?CrOnc.NetworkStateProperties}} event
    * @private
    */
   onDefaultNetworkChanged_: function(event) {
     var state = event.detail;
-    this.defaultNetworkGuid_ = (state ? state.GUID : '');
     this.isConnected_ =
-        !!state && state.ConnectionState == CrOnc.ConnectionState.CONNECTED;
-    if (!state || state.GUID != this.networkLastSelectedGuid_)
-      return;
+        state && state.ConnectionState == CrOnc.ConnectionState.CONNECTED;
+  },
 
-    // Duplicate asynchronous event may be delivered to some other screen,
-    // so disable it.
-    this.networkLastSelectedGuid_ = '';
-    this.onSelectedNetworkConnected_();
+  /**
+   * Event triggered when a cr-network-list-item connection state changes.
+   * @param {!{detail: !CrOnc.NetworkStateProperties}} event
+   * @private
+   */
+  onNetworkConnectChanged_: function(event) {
+    var state = event.detail;
+    if (state && state.GUID == this.networkLastSelectedGuid_ &&
+        state.ConnectionState == CrOnc.ConnectionState.CONNECTED) {
+      this.onSelectedNetworkConnected_();
+    }
   },
 
   /**
@@ -347,11 +349,8 @@ Polymer({
   onNetworkListNetworkItemSelected_: function(event) {
     var state = event.detail;
     assert(state);
-    // If the user has not previously made a selection and the default network
-    // is selected and connected, continue to the next screen.
-    if (this.networkLastSelectedGuid_ == '' &&
-        state.GUID == this.defaultNetworkGuid_ &&
-        state.ConnectionState == CrOnc.ConnectionState.CONNECTED) {
+    // If a connected network is selected, continue to the next screen.
+    if (state.ConnectionState == CrOnc.ConnectionState.CONNECTED) {
       this.onSelectedNetworkConnected_();
       return;
     }
